# owl-std

./: .clangd  CMakeLists.txt  README.md  TODO
examples/: CMakeLists.txt  str.c  str_hashmap.c  vector.c
include/owlstd/: queue.h  str.h  str_hashmap.h  vector.h
src/: queue.c  str.c  str.h  str_hashmap.c  vector.c  vector.h
tests/: CMakeLists.txt  str.cc  str_hashmap.cc  vector.cc
